--- a/src/app/pages/events/events.page.html
+++ b/src/app/pages/events/events.page.html
@@ -33,10 +33,48 @@
         <ion-label><i class="fas fa-sliders-h"></i>&nbsp; Filtrar eventos</ion-label>
       </ion-chip>
     </div> -->
-</div>
+<!-- =========>=>=>=> Filtro =========>=>=>=> -->
+  <div class="filter_place" (click)="isFilter = !isFilter">
+    <ion-chip color="primary">
+      <i class="fas fa-search magnifying"></i
+      ><ion-label>filtrar lugares</ion-label></ion-chip
+    >
+  </div>
+
+  <div *ngIf="isFilter" class="form_filter">
+    <form [formGroup]="filterForm">
+      <ion-select 
+        placeholder="Tipos" 
+          formControlName="tipo">
+        <ion-select-option >All</ion-select-option>
+        <ion-select-option
+          *ngFor="let ev of this.lista_tipos_eventos"
+          >{{ ev }}</ion-select-option
+        >
+      </ion-select>
+      <ion-select 
+        placeholder="Localidad"
+        formControlName="localidad"  >
+        <ion-select-option>All</ion-select-option>
+          <ion-select-option
+            *ngFor="let loc of this.lista_localidades_eventos"
+          >{{ loc }}</ion-select-option>
+      </ion-select>
+      <ion-button type="submit" (click)="filterEvento()">Filtrar</ion-button>
+    </form>
+
+  </div>
+
+
+
+
+<!-- =========<=<=<=< Filtro =========<=<=<=< -->
+
+
+  </div>
   <ion-list>
     <ion-item
-    *ngFor="let item of eventos"
+    *ngFor="let item of eventos | filterEvents1:dataform "
       class="event"
       (click)="openModalDetailEvent(item.id, item.fechaInicio, item.nombre, item.descripcion, item['imagen'].url, item.lugar)"
     >
