--- a/src/global.scss
+++ b/src/global.scss
@@ -27,7 +27,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Barlow&display=swap');
 @import "~@fortawesome/fontawesome-free/css/all.css";
-
+@import "~@flaticon/flaticon-uicons/css/all/all.css";
 .personalizar-modal .modal-wrapper {
    height: 85%;
    display: block; 
