--- a/src/app/pages/home-menu/home-menu.page.html
+++ b/src/app/pages/home-menu/home-menu.page.html
@@ -18,7 +18,7 @@
         <ion-label (click)="seeDepto()" *ngIf="!depto && deptoSelected == null"
           >departamento</ion-label
         >
-        <i class="fas fa-exchange-alt"></i>
+        <img src="/assets/icon/exchange.png" alt="">
         <ion-label
           class="distance_selected"
           (click)="seeDistance()"
