--- a/src/global.scss
+++ b/src/global.scss
@@ -26,8 +26,9 @@
 @import "~@ionic/angular/css/flex-utils.css";
 
 @import url('https://fonts.googleapis.com/css2?family=Barlow&display=swap');
-@import "~@fortawesome/fontawesome-free/css/all.css"; // desabilitar
-@import "~@flaticon/flaticon-uicons/css/all/all.css";
+//@import "~@fortawesome/fontawesome-free/css/all.css"; // desabilitar
+//@import "~@flaticon/flaticon-uicons/css/all/all.css";
+@import url('https://cdn-uicons.flaticon.com/uicons-regular-rounded/css/uicons-regular-rounded.css');
 
 .personalizar-modal .modal-wrapper {
    height: 85%;
