--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -1,25 +1,25 @@
 <ion-tabs>
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="home">
-      <i class="fas fa-home"></i>
+      <i class="fi fi-rr-home"></i>
     </ion-tab-button>
     <ion-tab-button tab="sleep">
-      <i class="fas fa-bed"></i>
+      <i class="fi fi-rr-bed"></i>
     </ion-tab-button>
     <ion-tab-button tab="events">
-      <i class="fas fa-calendar-week"></i>
+      <i class="fi fi-rr-calendar"></i>
     </ion-tab-button>
     <ion-tab-button tab="place">
-      <i class="fas fa-map-marked-alt main-option"></i>
+      <i class="fi fi-rr-map-marker"></i>
     </ion-tab-button>
     <ion-tab-button tab="eat">
-      <i class="fas fa-utensils"></i>
+      <i class="fi fi-rr-hamburger"></i>
     </ion-tab-button>
     <ion-tab-button tab="artist">
-      <i class="fas fa-palette"></i>
+      <i class="fi fi-rr-palette"></i>
     </ion-tab-button>
     <ion-tab-button tab="info">
-      <i class="fas fa-info-circle"></i>
+      <i class="fi fi-rr-info"></i>
     </ion-tab-button>
   </ion-tab-bar>
 </ion-tabs>
