--- a/src/app/pages/where-sleep/where-sleep.page.html
+++ b/src/app/pages/where-sleep/where-sleep.page.html
@@ -30,10 +30,10 @@
   </div>
   <ion-list>
     <div class="empty" *ngIf="sleep.length == 0">
+      <i class="fi fi-rr-sad icon_empty"></i>
       <div class="text_empty">
         No hay lugares para el departamento seleccionado
       </div>
-      <i class="far fa-sad-tear icon_empty"></i>
     </div>
     <ion-item *ngFor="let item of sleep | filtroDondeDormir:dataForm">
       <div class="padre">
