--- a/src/app/pages/artist/artist.page.html
+++ b/src/app/pages/artist/artist.page.html
@@ -27,8 +27,8 @@
         <ion-img [src]="art.imagen" class="img-elem"></ion-img>
       </div>
       <div class="infoArtist">
-        <div class="tipo">{{ art.tipo }}</div>
-        <div class="nombre">{{ art.nombre }}</div>
+        <div class="type">{{ art.tipo }}</div>
+        <div class="name">{{ art.nombre }}</div>
         <div class="netArtist">
           <img src="/assets/icon/instagram.png" alt="instagram">
           <img src="/assets/icon/spotify.png" alt="spotify">
