--- a/src/app/pages/tabs/tabs.page.scss
+++ b/src/app/pages/tabs/tabs.page.scss
@@ -1,4 +1,8 @@
-i {
+.icon-tab {
+  font-size: 2em;
+}
+
+ion-menu-button {
   font-size: 2em;
 }
 
@@ -7,7 +11,7 @@ ion-tab-bar {
   --border: none;
 }
 
-ion-tab-bar ion-tab-button:nth-child(4) {
+ion-tab-bar ion-tab-button:nth-child(3) {
   border-radius: 50%;
   margin-top: -40px;
   box-shadow: -1px 1px 3px 1px rgba(199, 196, 196, 0.58);
@@ -18,3 +22,5 @@ ion-tab-bar ion-tab-button:nth-child(4) {
 .main-option {
   font-size: 20px;
 }
+
+
