--- a/src/app/components/menu/menu.component.scss
+++ b/src/app/components/menu/menu.component.scss
@@ -2,3 +2,12 @@
     margin-right: 8px;
     font-size: 1.1em;
 }
+
+i {
+    padding: 0 10px 0 0;
+    font-size: 1.3em;
+}
+
+h3 {
+    font-weight: bold;
+}
