--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -1,25 +1,30 @@
 <ion-tabs>
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="home">
-      <i class="fi fi-rr-home"></i>
+      <i class="fi fi-rr-home icon-tab"></i>
     </ion-tab-button>
-    <ion-tab-button tab="sleep">
+    <!-- <ion-tab-button tab="sleep">
       <i class="fi fi-rr-bed"></i>
-    </ion-tab-button>
+    </ion-tab-button> -->
     <ion-tab-button tab="events">
-      <i class="fi fi-rr-calendar"></i>
+      <i class="fi fi-rr-calendar icon-tab"></i>
     </ion-tab-button>
     <ion-tab-button tab="place">
-      <i class="fi fi-rr-map-marker"></i>
+      <i class="fi fi-rr-map-marker icon-tab"></i>
     </ion-tab-button>
     <ion-tab-button tab="eat">
-      <i class="fi fi-rr-hamburger"></i>
+      <i class="fi fi-rr-hamburger icon-tab"></i>
     </ion-tab-button>
-    <ion-tab-button tab="artist">
+    <!-- <ion-tab-button tab="artist">
       <i class="fi fi-rr-palette"></i>
     </ion-tab-button>
     <ion-tab-button tab="info">
       <i class="fi fi-rr-info"></i>
+    </ion-tab-button> -->
+    <ion-tab-button>
+      <ion-menu-button menu="first">
+        <i class="fi fi-rr-menu-dots"></i>
+      </ion-menu-button>
     </ion-tab-button>
   </ion-tab-bar>
 </ion-tabs>
