--- a/src/app/pages/where-sleep/where-sleep.page.html
+++ b/src/app/pages/where-sleep/where-sleep.page.html
@@ -39,7 +39,7 @@
       <div class="padre">
         <div class="imagen">
           <ion-avatar item-start>
-            <ion-img [src]="item.imagen" class="img-elem"></ion-img>
+            <ion-img [src]="item.imagen.url" class="img-elem"></ion-img>
           </ion-avatar>
         </div>
         <div class="info">
