--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -410,7 +410,9 @@ body.dyslexic {
   .inicial-load,
   #place-container,
   #place-description,
-  #all-description {
+  #all-description,
+  ion-label,
+  h4 {
     font-family: "OpenDyslexicRegular" !important;
     font-weight: normal !important;
     font-style: normal !important;
