--- a/src/app/pages/tabs/tabs.page.scss
+++ b/src/app/pages/tabs/tabs.page.scss
@@ -11,13 +11,20 @@ ion-tab-bar {
   --border: none;
 }
 
-ion-tab-bar ion-tab-button:nth-child(3) {
-  border-radius: 50%;
-  margin-top: -40px;
-  box-shadow: -1px 1px 3px 1px rgba(199, 196, 196, 0.58);
-  -webkit-box-shadow: -1px 1px 3px 1px rgba(199, 196, 196, 0.58);
-  -moz-box-shadow: -1px 1px 3px 1px rgba(199, 196, 196, 0.58);
+.moreOptions {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
+
+// ion-tab-bar ion-tab-button:nth-child(3) {
+//   border-radius: 50%;
+//   margin-top: -40px;
+//   // box-shadow: -1px 1px 3px 1px rgba(199, 196, 196, 0.58);
+//   // -webkit-box-shadow: -1px 1px 3px 1px rgba(199, 196, 196, 0.58);
+//   // -moz-box-shadow: -1px 1px 3px 1px rgba(199, 196, 196, 0.58);
+// }
 
 .main-option {
   font-size: 20px;
