--- a/src/global.scss
+++ b/src/global.scss
@@ -30,6 +30,8 @@
 //@import "~@flaticon/flaticon-uicons/css/all/all.css";
 @import url('https://cdn-uicons.flaticon.com/uicons-regular-rounded/css/uicons-regular-rounded.css');
 
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
+
 .personalizar-modal .modal-wrapper {
    height: 85%;
    display: block; 
