--- a/src/app/pages/place/place.page.html
+++ b/src/app/pages/place/place.page.html
@@ -1,10 +1,10 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-buttons slot="start">
+    <!-- <ion-buttons slot="start">
       <ion-menu-button menu="first">
         <i class="fas fa-bars" slot="start"></i>
       </ion-menu-button>
-    </ion-buttons>
+    </ion-buttons> -->
   </ion-toolbar>
 </ion-header>
 <ion-content>
