--- a/src/app/pages/place/place.page.scss
+++ b/src/app/pages/place/place.page.scss
@@ -107,36 +107,43 @@ ion-card-header {
 }
 
 .filter_place {
-  margin: -30px auto 0 auto;
-  z-index: 20;
-  width: 85%;
-  opacity: 1;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  margin: -30px auto 10px auto;
+  position: relative;
+  z-index: 100;
+  width: 92%;
+  background-color: rgb(240, 240, 240);
+  padding: 7px;
+  border-radius: 60px;
 }
 
-ion-chip {
-  width: 100%;
-  background-color: #e2edff;
-  margin-bottom: 10px;
-  padding: 21px 21px 21px 3px;
-  --color: #3880ff;
-  border-radius: 50px;
-  font-weight: 600;
-  letter-spacing: 1px;
-}
-
-.magnifying {
-  padding: 10.5px;
-  border-radius: 100%;
+.btn-filter {
+  border-radius: 60px;
+  background-color: #fc67ff;
+  padding: 10px;
+  width: 35%;
+  text-align: center;
+  font-weight: bold;
+  font-family: 'Poppins';
   color: #fff;
-  background-color: #01dfb8;
-  margin-right: 10px;
+  font-size: .8em;
+}
+
+ion-label {
+  font-weight: bold;
+  font-family: 'Poppins';
+  color: rgb(161, 161, 161);
+  font-size: .8em;
 }
 
 .form_filter {
   width: 85%;
   margin: 0 auto 5px auto;
   border: 1px solid #3880ff;
-  z-index: 20;
+  z-index: 100;
   background-color: #fff;
 }
 
