filtroEventos: Elimina el boton filtrar. Filtro dinamico.

--- a/src/app/pages/events/events.page.html
+++ b/src/app/pages/events/events.page.html
@@ -47,26 +47,39 @@
 
       <ion-select 
         placeholder="Tipos" 
+        (ionChange)="filterEvento()"
           formControlName="tipo">
-        <ion-select-option  value="" >All</ion-select-option>
+        <ion-select-option value="" >All</ion-select-option>
         <ion-select-option
           *ngFor="let ev of this.lista_tipos_eventos"
           value="{{ ev }}"
+          
           >{{ ev }}</ion-select-option>
           
       </ion-select>
 
       <ion-select 
         placeholder="Localidad"
+        (ionChange)="filterEvento()"
         formControlName="localidad"  >
         <ion-select-option value="" >All</ion-select-option>
           <ion-select-option
             *ngFor="let loc of this.lista_localidades_eventos"
           >{{ loc }}</ion-select-option>
       </ion-select>
+      
+      <ng-container>
+        <ion-label> <small>$</small></ion-label>
+        <ion-toggle 
+        (ionChange)="filterEvento()"
+        formControlName="moneda"
+          value="" ></ion-toggle>
+        <ion-label> <small>u$s</small>  </ion-label>
+      </ng-container>
 
 
-      <ion-button type="submit" (click)="filterEvento()">Filtrar</ion-button>
+      
+      <!-- <ion-button type="submit" (click)="filterEvento()">Filtrar</ion-button> -->
     </form>
 
   </div>
