--- a/src/app/pages/place/place.page.html
+++ b/src/app/pages/place/place.page.html
@@ -44,6 +44,7 @@
         </div>
       </ion-slide>
     </ion-slides>
+    <!-- filtro -->
     <div class="filter_place" (click)="changeFilter()">
       <ion-label>localidad</ion-label>
       <img src="/assets/icon/exchange.png" alt="">
