--- a/src/app/pages/events/events.page.html
+++ b/src/app/pages/events/events.page.html
@@ -34,12 +34,17 @@
       </ion-chip>
     </div> -->
 <!-- =========>=>=>=> Filtro =========>=>=>=> -->
+
   <div class="filter_place" (click)="isFilter = !isFilter">
-    <ion-chip color="primary">
-      <!-- <i class="fas fa-search magnifying"></i> -->
+    <ion-label>localidad</ion-label>
+    <img src="/assets/icon/exchange.png" alt="">
+    <ion-label>tipo</ion-label>
+    <div class="btn-filter">Filtrar</div>
+
+    <!-- <ion-chip color="primary">
+      <i class="fas fa-search magnifying"></i>
       <i class="fi fi-sr-search-alt"></i>
-      <ion-label>filtrar lugares</ion-label></ion-chip
-    >
+    <ion-label>filtrar lugares</ion-label></ion-chip> -->
   </div>
 
   <div *ngIf="isFilter" class="form_filter">
@@ -77,7 +82,7 @@
         <ion-label> <small>u$s</small>  </ion-label>
       </ng-container>
 
-
+  
       
       <!-- <ion-button type="submit" (click)="filterEvento()">Filtrar</ion-button> -->
     </form>
