textToSpeech: Modificaciones en la vista.

--- a/src/app/pages/modal-info/modal-info.page.html
+++ b/src/app/pages/modal-info/modal-info.page.html
@@ -124,6 +124,19 @@
     </ion-toolbar>
 </ion-header>
 <ion-content>
+    <ion-grid class="ion-margin-top ion-margin-start:0px " >
+
+        <ion-row >
+            <ion-col size="2" >
+                <!-- <i class="fi fi-rr-file-music"></i> -->
+                <i color="back"  class="fi fi-rr-play"></i>
+            </ion-col>
+            <ion-col size="2" >
+                <i color="back"  class="fi fi-rr-file-music"></i>
+            </ion-col>
+        </ion-row>
+    </ion-grid>
+
     <ion-text>
         <div class="texto" id="all-description" [innerHTML]="place.descripcion">
         </div>
