--- a/src/app/pages/where-eat/where-eat.page.html
+++ b/src/app/pages/where-eat/where-eat.page.html
@@ -16,27 +16,28 @@
         <img class="imgSlider" src="{{item.imagen}}" />
       </ion-slide>
     </ion-slides>
-    <div class="filter_place" (click)="changeFilter()">
-      <ion-chip color="primary">
-        <i class="fas fa-search magnifying"></i
-        ><ion-label>filtrar lugares</ion-label></ion-chip
-      >
-    </div>
+    <!-- filtro -->
 
+    <div class="filter_place" (click)="changeFilter()">
+      <ion-label>localidad</ion-label>
+      <img src="/assets/icon/exchange.png" alt="">
+      <ion-label>tipo</ion-label>
+      <button type="button" class="btn-filter">Filtrar</button>
+    </div>
+    
     <div *ngIf="isFilter" class="form_filter">
       <form [formGroup]="filterForm">
-        <ion-select placeholder="Localidad" formControlName="localidad">
+        <ion-select 
+          placeholder="Localidad" 
+          formControlName="localidad"
+          (ionChange)="filterEat()" >
           <ion-select-option value="">Todos</ion-select-option>
           <ion-select-option
             *ngFor="let loc of locationActive"
             value="{{ loc.localidad }}"
-            >{{ loc.localidad }}</ion-select-option
-          >
+            >{{ loc.localidad }}</ion-select-option>
         </ion-select>
-        <ion-select placeholder="Categoría">
-          <ion-select-option>Departamento</ion-select-option>
-        </ion-select>
-        <ion-button type="submit" (click)="filterEat()">Filtrar</ion-button>
+  
       </form>
     </div>
   </div>
