--- a/src/app/pages/where-sleep/where-sleep.page.scss
+++ b/src/app/pages/where-sleep/where-sleep.page.scss
@@ -93,3 +93,42 @@ span {
     font-size: 5em;
     color: #d6d2d1;
   }
+
+  .form_filter {
+    width: 85%;
+    height: 5%;
+    margin: 0 auto 5px auto;
+    border: 1px solid #3880ff;
+    z-index: 100;
+    background-color: #fff;
+    border-radius: 60px; 
+    justify-content: space-around;
+    position: relative;
+ 
+}
+
+.filter_place {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    margin: -30px auto 10px auto;
+    position: relative;
+    z-index: 100;
+    width: 92%;
+    background-color: rgb(240, 240, 240);
+    padding: 7px;
+    border-radius: 60px;
+}
+
+.btn-filter {
+    border-radius: 60px;
+    background-color: #fc67ff;
+    padding: 10px;
+    width: 35%;
+    text-align: center;
+    font-weight: bold;
+    font-family: 'Poppins';
+    color: #fff;
+    font-size: .8em;
+}
