contadorVisitasLugar: se agrega contador de visitas a lugares en el componente Place. Se prueba OK!

--- a/src/app/pages/place/place.page.html
+++ b/src/app/pages/place/place.page.html
@@ -92,7 +92,7 @@
     <ion-card
       *ngFor="let item of places | filterPlaces:dataForm"
       id="{{ item.id }}"
-      (click)="getPlace(item.id)"
+      (click)="getPlace(item.id); sumaVisitaLugar(item.id)"
       [routerLink]="['/place-selected']"
     >
       <ion-card-header
